scripts/clickhouse-backfill-rust/vendor/clickhouse-rs/tests/ui/row_many_lifetimes.stderr
error: `Row` cannot be derived for structs with multiple lifetimes
 --> tests/ui/row_many_lifetimes.rs:2:16
  |
2 | struct Row<'a, 'b> {
  |                ^^
