scripts/clickhouse-backfill-rust/vendor/clickhouse-rs/tests/ui/row_many_lifetimes.rs
#[derive(clickhouse::Row)]
struct Row<'a, 'b> {
    a: &'a str,
    b: &'b str,
}

fn main() {}
